<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="khwelatestrun.khwela.Reset_password">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/txtOld_Password"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical" />
    <EditText
        android:id="@+id/eOldPass"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/txtNew_Password"
        android:gravity="center|center_vertical"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/eNewPass"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/txtConfirm_Password"
        android:gravity="center|center_vertical"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/eConfirmPass"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnReset"
        android:text="@string/btnReset_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
