<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="khwelatestrun.khwela.homepage"

    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/links1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:id="@+id/Alarm"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/alarm"
                android:contentDescription="@string/imgalarm"
                android:id="@+id/imgalarm" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/imgalarm"
                android:id="@+id/link_alarm"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/Buyticket">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/information"
                android:contentDescription="@string/imgbuy"
                android:id="@+id/imgbuytickets" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/link_buy"
                android:text="@string/imgbuy"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/links1"
        android:id="@+id/links2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:id="@+id/Track">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/tracking"
                android:contentDescription="@string/imgtrack"
                android:id="@+id/imgtracking" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/imgtrack"
                android:id="@+id/link_track"
                android:gravity="center"
                />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/Chat">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/chat"
                android:contentDescription="@string/imgchart"
                android:id="@+id/imgcharting" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="Online Forum"
                android:id="@+id/link_chat"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_below="@+id/links2"
        android:layout_centerHorizontal="true"
        android:id="@+id/links3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="140dp"

            android:id="@+id/notification">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/notification"
                android:contentDescription="@string/imgnotification"
                android:id="@+id/imgnotify" />
            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/imgnotification"
                android:id="@+id/Notification"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/help">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/about"
                android:contentDescription="@string/imgAbout_us"
                android:id="@+id/imgabout"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="My Profile"
                android:id="@+id/link_help"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
